--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         return fetch(GAS_URL, {
           method: 'POST',
           mode: 'cors',
-          headers: { 'Content-Type': 'application/json' },
+          headers: { 'Content-Type': 'text/plain;charset=utf-8' },
           body: JSON.stringify({ data: dataUrl, boothCode })
         })
           .then((response) => {
